--- a/foundations/spectra/index.pug
+++ b/foundations/spectra/index.pug
@@ -29,8 +29,8 @@ block content
                 +tex.
                     In the cohesive type system, $\mathbf{Sp}$ is a parameterless type in
                     $\mathbf{U_{(0,0)}}$, not a universe, supporting operations like suspension
-                    ($\Sigma^{\infty}$), wedge sums ($\vee$), homomorphisms ($\mathbf{Hom}_{\mathbf{Sp}}$),
-                    and qubits ($\mathbf{Qubit}$).
+                    $\Sigma^{\infty}$, wedge sums $\vee$, homomorphisms $\mathbf{Hom}_{\mathbf{Sp}}$,
+                    and qubits $\mathbf{Qubit}$.
 
                 h2 Formation
                 +tex.
