--- a/index.pug
+++ b/index.pug
@@ -53,7 +53,7 @@ block content
                     .macro__col
                         h3#hts <b>HOMOTOPY</b>
                         ol
-                            li: a(href='https://urs.groupoid.space/foundations/universe/') U<sub>n</sub>
+                            li: a(href='https://urs.groupoid.space/foundations/universe/') UNIVERSE</sub>
                             li: a(href='https://urs.groupoid.space/foundations/forall/') FORALL
                             li: a(href='https://urs.groupoid.space/foundations/sigma/') SIGMA
                             li: a(href='https://urs.groupoid.space/foundations/exists/') EXISTS
@@ -151,7 +151,7 @@ block content
                     A cohesive, graded extension of type theory infused with supergeometry,
                     where types inhabit universes indexed by parity, symmetry, and smoothness.
                     Using $\mathbf{U_n^g}$, $\mathfrak{s}$, $\mathbf{\flat}$, $\mathbf{\sharp}$, $\mathbf{\bigcirc}$,
-                    $\mathbf{\Im}$, $\mathbf{\otimes}$, $\mathbf{Smth}$, and $\mathbf{SupSmth}$,
+                    $\mathbf{\Im}$, $\mathbf{\otimes}$, $\mathbf{SmthSet}$, and $\mathbf{SupSmthSet}$,
                     it equips types with tensor structures, group actions, and super-modality
                     operators to model differential cohesion, infinitesimal geometry,
                     and graded symmetries. This system unifies the logic of supermanifolds,
