--- a/index.pug
+++ b/index.pug
@@ -109,6 +109,7 @@ block content
                     \begin{array}{c} \\
                        \mathrm{Urs} := \mathrm{MLTT}\ |\ \mathrm{Base}\ |\ \mathrm{Super}\ \\
                        \mathrm{MLTT} := \mathrm{Cosmos}\ |\ \mathrm{Var}\ |\ \mathrm{Forall}\ |\ \mathrm{Exists}\ \\
+                                  |\ \mathrm{\Sigma}\ |\ \mathrm{\Pi}\ |\ \mathbf{Id}\ |\ 0\ |\ 1\ |\ 2\ |\ \mathbf{W} \\
                        \mathrm{Cosmos} := \mathbf{U_n}\ |\ \mathbf{V_n}\ |\ \mathbf{U_n^{g \in \{Bose,Fermi\}}}\ \\
                        \mathrm{Var} := \mathbf{var}\ \mathrm{ident}\ |\ \mathbf{hole}\ \\
                        \mathrm{Base} := \mathbf{ℕ}\ |\ \mathrm{ℤ}\ |\ \mathrm{ℚ}\ |\ \mathrm{ℝ}\ |\ \mathrm{ℂ}\ |\ \mathrm{ℍ}\ |\ \mathrm{𝕆}\ |\ \mathrm{𝕍}\ \\
