--- a/foundations/glue/index.pug
+++ b/foundations/glue/index.pug
@@ -11,7 +11,7 @@ block title
 
 block content
     nav
-        <a href='../../index.html'>ANDERS</a>
+        <a href='../../index.html'>URS</a>
         <a href='../../lib/index.html'>LIB</a>
         <a href='#'>GLUE</a>
 
