--- a/index.pug
+++ b/index.pug
@@ -146,7 +146,7 @@ block content
                     as dynamic objects rich with paths, homotopies, and higher
                     coherences—a language for capturing the shape of mathematical truth.
 
-                h2 Gradeded Cohesion
+                h2 Graded Cohesion
                 +tex.
                     A cohesive, graded extension of type theory infused with supergeometry,
                     where types inhabit universes indexed by parity, symmetry, and smoothness.
