--- a/index.pug
+++ b/index.pug
@@ -118,7 +118,7 @@ block content
                        \mathrm{Forall} := \forall\ \mathrm{ident}\ \mathrm{E}\ \mathrm{E}\ |\ \lambda\ \mathrm{ident}\ \mathrm{E}\ \mathrm{E}\ |\ \mathrm{E}\ \mathrm{E}\ \\
                        \mathrm{Exists} := \exists\ \mathrm{ident}\ \mathrm{E}\ \mathrm{E}\ |\ (\mathrm{E}, \mathrm{E})\ |\ \mathrm{E}\mathbf{.1}\ |\ \mathrm{E}\mathbf{.2}\ \\
                        \mathrm{Smooth} := \mathbf{SmthSet}\ |\ \mathbf{plt}\ |\ \mathbf{\bigcirc}\ |\ \mathbf{\Im}\ |\ \mathbf{\sharp}\ |\ \mathbf{\flat}\ \\
-                       \mathrm{Spectra} := \mathbf{Sp}\ |\ \mathbf{\Sigma}\ |\ \mathbf{\wedge}\ |\ \mathbf{sp}\ \\
+                       \mathrm{Spectra} := \mathbf{Sp}\ |\ \mathbf{\Sigma}\ |\ \mathbf{\Sigma^{-1}}\ |\ \mathbf{\wedge}\ |\ \mathbf{sp}\ |\ \mathbf{\otimes}\ |\ \mathbf{\multimap} \\
                        \mathrm{Form} := \mathbf{Form}\ |\ \mathbf{f}\ |\ \mathbf{f_\wedge}\ |\ \mathbf{Form_{ind}}\\
                        \mathrm{Diff} := \mathbf{Diff}\ |\ \mathbf{KU_\flat^G}\ |\ \mathbf{KU^G}\ \\
                        \mathrm{Grpd} := \mathbf{Grpd}\ |\ \mathbf{\Delta^n}\ |\ \mathbf{Grpd^n_{Ind}}\ \\
