--- a/index.pug
+++ b/index.pug
@@ -60,6 +60,7 @@ block content
                             li: a(href='https://urs.groupoid.space/foundations/real/') REAL
                             li: a(href='https://urs.groupoid.space/foundations/path/') PATH
                             li: a(href='https://urs.groupoid.space/foundations/glue/') GLUE
+                            li: a(href='https://urs.groupoid.space/foundations/em/') E-M
 
                     .macro__col
                         h3#mltt <b>SUP-SMTH</b>
