--- a/foundations/spectra/index.pug
+++ b/foundations/spectra/index.pug
@@ -200,5 +200,12 @@ block content
                     $$
                 +code('urs').
                     def neg_susp_spectrum (d : Nat) : Sp
+                p(style="font-size:14px;").
+                    [1]. Daniel Quillen. (1967). <a href="https://people.math.rochester.edu/faculty/doug/otherpapers/Quillen-HA-latex2.pdf">Axiomatic Homotopy Theory in Homotopical algebra</a><br>
+                    [2]. Kenneth Brown. (1973). <a href="">Abstract Homotopy Theory and Generalized Sheaf Cohomology</a><br>
+                    [3]. M.A. Mandell, J.P. May S. Schwede, B. Shipley. (1999). <a href="https://www.math.uchicago.edu/~may/PAPERS/mmssLMSDec30.pdf">Model Categories of Diagram Spectra</a><br>
+                    [4]. Stefan Schwede. (2012). <a href="https://www.math.uni-bonn.de/~schwede/SymSpec-v3.pdf">Symmetric spectra</a><br>
+                    [5]. Maximilien Holmberg-Péroux. EFPL (2014). <a href="An Introduction to Stable Homotopy Theory">https://homepages.math.uic.edu/~mholmb2/stable.pdf</a><br>
+                    [6]. Mitchell Riley. (2022). <a href="https://digitalcollections.wesleyan.edu/_flysystem/fedora/2023-03/22132-Original%20File.pdf">A Bunched Homotopy Type Theory for Synthetic Stable Homotopy Theory</a><br>
 
 include ../../footer
